# angle-static-cmake

./: CMakeLists.txt  WAR_vk_cache_utils.cpp  angle-srcs.cmake  vma_gen.cpp
angle_commit/: ANGLEShaderProgramVersion.h  angle_commit.h
